@@ -33,6 +33,7 @@ $update['action']      = $_POST['action'];
 $update['name']        = htmlentities($_POST['name'], ENT_COMPAT | ENT_HTML401, "UTF-8");	//prevent XSS
 $update['description'] = htmlentities($_POST['description'], ENT_COMPAT | ENT_HTML401, "UTF-8");	//prevent XSS
 $update['id']          = $_POST['id'];
+$update['strictMode']  = $_POST['strictMode'];
 
 if(isset($_POST['delegate'])) {
 	if($_POST['delegate'] == 1) {
